Minor fix: Aligned blogpost icons to grid in sprite

--- a/client/stylus/app.activity.styl
+++ b/client/stylus/app.activity.styl
@@ -1065,7 +1065,7 @@ button.activity-status-context
   .update .icon
     bg                      position,-140px -320px
   .blogpost .icon
-    bg                      position,-138px -645px
+    bg                      position,-141px -640px
   .discussion .icon
     bg                      position,-140px -340px
   .question .icon
@@ -1083,7 +1083,7 @@ button.activity-status-context
     .update .icon
       bg                    position,-160px -320px
     .blogpost .icon
-      bg                    position,-158px -645px
+      bg                    position,-161px -641px
     .discussion .icon
       bg                    position,-160px -340px
     .question .icon
